Fix wide fonts in "Mozillians" link (bug 679973)
A permanent fix might be to convert the wordmark to a PNG, but
this prevents weird overlap errors if you're unable to import
the correct font (happens in FF Linux).

--- a/media/css/mozilla-base.css
+++ b/media/css/mozilla-base.css
@@ -57,7 +57,7 @@ body {
     color: #fff;
     display: inline;
     float: left;
-    font-family: MetaBold, 'Trebuchet MS', sans-serif;
+    font-family: MetaBold, 'Trebuchet MS', Helvetica, Arial, "DejaVu Sans", sans-serif;
     font-size: 50px;
     font-weight: bold;
     letter-spacing: -2px;
